--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "redux-auth",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "vite:dev": "vite",
+    "vite:build": "tsc && vite build",
+    "vite:preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -38,6 +39,9 @@
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.6"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
